Fix straight quotes

--- a/src/content/recipes/bold-earth.mdx
+++ b/src/content/recipes/bold-earth.mdx
@@ -1,16 +1,17 @@
 ---
 title: "Bold Earth"
-date: "07-01-2025"
+date: "2025-07-01"
 hero: "/images/recipes/spice-mix/bold-earth.png"
 tags: ["spice-mix"]
 parentPost: "/posts/bold-earth"
-text: |
+text: |-
   My Bold Earth spice mix is a family favorite. Each sprinkle carries the earthy heat of the Sahara, the smoky allure of bustling souks, and the sweet, aromatic whispers of ancient trade routes. 
 
   It turns everyday cooking into an adventure, inviting you to savor the depth and complexity of a place where spices tell stories, meals bring people together, and flavors celebrate life’s vibrancy.
 
 yield: "3/4 cup"
-prep time: "5 minutes"
+prep_time: "5 minutes"
+
 ingredients:
   - "3 Tablespoons turmeric"
   - "2 Tablespoons cumin"
@@ -19,16 +20,17 @@ ingredients:
   - "3 teaspoons allspice"
   - "2 teaspoons cinnamon"
   - "2 teaspoons cayenne"
-  - "3 teaspoons fine sea salt”
+  - "3 teaspoons fine sea salt"
   - "3 teaspoons pepper"
-  
+
 steps:
   - "Measure and whisk all ingredients together."
-  - “Transfer to a clean, dry jar. Label and date.”
-  - “Storage: cool, dark cupboard up to 6 months.”
+  - "Transfer to a clean, dry jar. Label and date."
+  - "Storage: cool, dark cupboard up to 6 months."
 
 bakingPrepTime: "10 minutes"
 bakingTime: "45 minutes"
+
 bakingIngredients:
   - "1.5 pounds of chicken thigh with skin/bone (or your choice of protein)"
   - "1 large eggplant, cut into bite-sized cubes"
@@ -39,10 +41,10 @@ bakingIngredients:
 bakingSteps:
   - "Preheat oven to 425°."
   - "Toss eggplant cubes in 2 Tablespoons of olive oil until thoroughly coated; spread in an even layer on a sheet pan."
-  - "Pat chicken thigh dry.  Rub with remaining 2 Tablespoons of olive oil and 2 Tablespoons of Bold Earth spice mix."
+  - "Pat chicken thigh dry. Rub with remaining 2 Tablespoons of olive oil and 2 Tablespoons of Bold Earth spice mix."
   - "Nestle chicken thighs, with skin-side up, on top of the eggplant cubes."
-  - "Bake for 20 minutes.  The internal temperature of chicken should be 165 degrees or greater.  Toss eggplants and rotate sheet pan."
-  - "Continue baking for another 20-25 minutes until chicken skin is golden and eggplants are tender with browned edges."
+  - "Bake for 20 minutes. The internal temperature of chicken should be 165 degrees or greater. Toss eggplants and rotate sheet pan."
+  - "Continue baking for another 20–25 minutes until chicken skin is golden and eggplants are tender with browned edges."
   - "Enjoy with rice or other sides."
 
 pdf: "bold-earth.pdf"
