Add Sides as new Recipes category

--- a/src/content/recipes/maple-glazed-carrots.mdx
+++ b/src/content/recipes/maple-glazed-carrots.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Maple Glazed Carrots"
+title: "Rooty Maple Delights"
 date: "2025-09-30"
-hero: "/images/recipes/others/maple-glazed-carrots.jpeg"
+hero: "/images/recipes/sides/maple-glazed-carrots.jpeg"
 tags: ["sides"]
-parentPost: "/posts/rootly-maple-delights"
+parentPost: "/posts/rooty-maple-delights"
 text: |-
   My Bold Earth spice mix is a family favorite. Each sprinkle carries the earthy heat of the Sahara, the smoky allure of bustling souks, and the sweet, aromatic whispers of ancient trade routes. 
 
