Add Field Notes as a new category; Add DropDownPanel for Field Notes

--- a/src/content/crafts/ghost-pipes.mdx
+++ b/src/content/crafts/ghost-pipes.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Ghost Pipe Tincture"
-date: "07-10-2025"
+date: "08-10-2025"
 hero: "/images/posts/ghost-pipe.jpeg"
 tags: ["crafts", "kitchen-crafts"]
 parentPost: "/posts/spectral-ghost-pipe"
@@ -17,7 +17,5 @@ text: |
 
   - Only take a stem or two from any one clump.  Do not forage more than what you need.  Do not forage more than a fifth of what you find. This years growth is what fuels future blooms.
 
-  🫖 I use these cute little heart shaped molds from Amazon: <a href="https://a.co/d/idTdSsE" target="_blank" rel="noopener noreferrer">Heart Molds</a>
-
-pdf: "pussy-hat.pdf"
+pdf: "coming-soon.pdf"
 ---
