--- a/src/content/posts/black-truffles.mdx
+++ b/src/content/posts/black-truffles.mdx
@@ -5,4 +5,6 @@ hero: "/images/posts/black-truffles.jpeg"
 tags: ["woodland"]
 text: |
   I was tromping through the woods in a section I rarely walk through, and I find a beutiful specimen of black truffles.
+
+  🌱 <a href="/field-notes/black-truffles">Field Notes on Black Truffles</a></p>
 ---
