--- a/src/content/posts/bold-earth.mdx
+++ b/src/content/posts/bold-earth.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Jar of Bold Earth"
+title: "Jar of Bold Earth Spice Mix"
 date: "07-01-2025"
 hero: "/images/recipes/spice-mix/bold-earth.png"
 tags: ["spice-mix"]
