--- a/src/content/posts/fairy-house.mdx
+++ b/src/content/posts/fairy-house.mdx
@@ -12,5 +12,5 @@ text: |
 
   🧚🏼 <a href="/crafts/fairy-house">Whimsical Fairy Homes</a></p>
 
-pdf: "dish-clothes-wrapper.pdf"
+pdf: "fairy-house.pdf"
 ---
