--- a/src/content/recipes/bold-earth.mdx
+++ b/src/content/recipes/bold-earth.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Bold Earth"
+title: "Bold Earth Spice Mix Recipe"
 date: "2025-07-01"
 hero: "/images/recipes/spice-mix/bold-earth.png"
 tags: ["spice-mix"]
