Fix FieldNotes slug

--- a/src/content/crafts/ghost-pipe.mdx
+++ b/src/content/crafts/ghost-pipe.mdx
@@ -1,8 +1,8 @@
 ---
 title: "Ghost Pipe Tincture"
-date: "08-10-2025"
+date: "2025-08-10"
 hero: "/images/posts/ghost-pipe.jpeg"
-tags: ["crafts", "kitchen-crafts"]
+tags: ["crafts", "woodland-crafts"]
 parentPost: "/posts/spectral-ghost-pipe"
 text: |
   Something...
