--- a/src/content/recipes/chanterelle-kimchi.mdx
+++ b/src/content/recipes/chanterelle-kimchi.mdx
@@ -2,7 +2,7 @@
 title: "Chanterelle Kimchi"
 date: "2025-07-15"
 hero: "/images/posts/chanterelles.jpeg"
-tags: ["spice-mix"]
+tags: ["foraged-recipes"]
 parentPost: "/posts/golden-fairy-rings"
 text: |-
   My Bold Earth spice mix is a family favorite. Each sprinkle carries the earthy heat of the Sahara, the smoky allure of bustling souks, and the sweet, aromatic whispers of ancient trade routes. 
