Add middle column to DropDownPanel for Woodlands

--- a/src/content/recipes/chanterelle-kimchi.mdx
+++ b/src/content/recipes/chanterelle-kimchi.mdx
@@ -5,9 +5,7 @@ hero: "/images/posts/chanterelles.jpeg"
 tags: ["foraged-recipes"]
 parentPost: "/posts/golden-fairy-rings"
 text: |-
-  My Bold Earth spice mix is a family favorite. Each sprinkle carries the earthy heat of the Sahara, the smoky allure of bustling souks, and the sweet, aromatic whispers of ancient trade routes. 
-
-  It turns everyday cooking into an adventure, inviting you to savor the depth and complexity of a place where spices tell stories, meals bring people together, and flavors celebrate life’s vibrancy.
+  My Chanterelle Kimchi won't last until next season.
 
 yield: "3 cups"
 prep_time: "15 minutes"
