--- a/src/content/woodland-crafts/birdseed-ornaments.mdx
+++ b/src/content/woodland-crafts/birdseed-ornaments.mdx
@@ -2,7 +2,7 @@
 title: "Birdseed Ornaments"
 date: "0-05-2025"
 hero: "/images/crafts/birdseed-ornament.png"
-tags: ["other-crafts"]
+tags: ["woodland-crafts"]
 parentPost: "/posts/birdseed-ornaments"
 text: |
   Every few seasons, my girls and I build fairy houses to scatter around our woods.  It's a little touch of whimsy that fills my heart when I'm outside breathing in the universe.
