--- a/src/content/woodland-crafts/ghost-pipe.mdx
+++ b/src/content/woodland-crafts/ghost-pipe.mdx
@@ -1,10 +1,13 @@
 ---
-title: "Field Notes on Ghost Pipes"
+title: "Ghost Pipes Tincture"
 date: "2025-07-05"
 hero: "/images/posts/ghost-pipe.jpeg"
 tags: ["field-notes"]
 parentPost: "/posts/spectral-ghost-pipe"
 text: |
-  Ghost Pipes...
+  Ghost Pipe...
+
+  Stuff...
+
 pdf: "ghost-pipe.pdf"
 ---
