Reorder content dates

--- a/src/content/crafts/ballband-kitchen-clothes.mdx
+++ b/src/content/crafts/ballband-kitchen-clothes.mdx
@@ -1,23 +1,21 @@
 ---
-title: "Ballband Dishie Clothes"
-date: "07-25-2025"
+title: "My Dishie Clothes"
+date: "2025-07-25"
 hero: "/images/posts/ballband.jpeg"
 tags: ["knitting"]
+published: true
 parentPost: "/posts/ballband"
 
 text: |
-  My all time classic - the ballband dishie clothes. I first found this pattern years ago on Canadian Living, and I’ve been making it ever since.  
 
-  Always with Dishie cotton yarn from Knit Picks. At this point, I’ve made every color combination under the sun.
-
-  My kitchen drawers are full of them, and they get daily use — wiping counters, drying dishes, and generally making themselves indispensable.
+  My work horse of a rag that I make in every color combination.  I hope you enjoy this easy to remember and ever-so-useful project.
 
   🧶 Original Pattern: <a href="https://www.canadianliving.com/home-and-garden/knitting-and-crochet/article/knit-a-ballband-dishcloth" target="_blank" rel="noopener noreferrer">Ballband Dishcloth</a>  
-  🧶 Dishie Cotton Yarn: <a href="https://www.knitpicks.com/yarn/dishie/c/5420207" target="_blank" rel="noopener noreferrer">Dishie Cotton from Knit Picks</a>
+  🧶 Dishie Cotton Yarn: <a href="https://www.knitpicks.com/yarn/dishie/c/5420207" target="_blank" rel="noopener noreferrer">Dishie</a> Cotton from <a href="https://www.knitpicks.com" target="_blank" rel="noopener noreferrer">Knit Picks</a>
 
 size: 'Approximately 5.5" x 8.5"'
 materials:
-  - "Dishie worsted weight by Knit Picks (two contrasting colors)"
+  - '<a href="https://www.knitpicks.com/yarn/dishie/c/5420207" target="_blank" rel="noopener noreferrer">Dishie</a> worsted weight by Knit Picks (two contrasting colors)'
   - "US 6 needles"
 gauge: "Unimportant"
 
