--- a/src/content/field-notes/chanterelles.mdx
+++ b/src/content/field-notes/chanterelles.mdx
@@ -1,8 +1,9 @@
 ---
 title: "Field Notes on Chanterelles"
-date: "2025-07-05"
+date: "2025-07-15"
 hero: "/images/posts/chanterelles.jpeg"
 tags: ["field-notes"]
+published: false
 parentPost: "/posts/golden-fairy-rings"
 text: |
   Chanterelles...
