--- a/src/content/posts/ballband-kitchen-clothes.mdx
+++ b/src/content/posts/ballband-kitchen-clothes.mdx
@@ -1,16 +1,17 @@
 ---
 title: "My Dishie Clothes"
-date: "07-25-2025"
+date: "2025-07-25"
 hero: "/images/posts/ballband.jpeg"
 tags: ["crafts"]
+published: true
 text: |
-  I love keeping my hands busy, even when I’m relaxing. Quiet evenings are often spent with music or an audiobook playing, knitting away at the same familiar project. 
+  I love keeping my hands busy, even when I’m relaxing. Quiet evenings are often spent with an audiobook and a knitting project.
 
-  For me, that’s the classic ballband dishcloth. I first found this pattern years ago on <a href="https://www.canadianliving.com/home-and-garden/knitting-and-crochet/article/knit-a-ballband-dishcloth" target="_blank" rel="noopener noreferrer">Canadian Living</a>, and I’ve been making it ever since.  
+  More often than not, the project is the classic ballband dishcloth. I first found this pattern years ago on <a href="https://www.canadianliving.com/home-and-garden/knitting-and-crochet/article/knit-a-ballband-dishcloth" target="_blank" rel="noopener noreferrer">Canadian Living</a>, and I’ve been making it ever since.  
 
-  Always with Dishie cotton yarn from <a href="https://www.knitpicks.com/yarn/dishie/c/5420207" target="_blank" rel="noopener noreferrer">Knit Picks</a>. At this point, I’ve made every color combination under the sun.
+  Always with Dishie 100% cotton yarn from <a href="https://www.knitpicks.com/yarn/dishie/c/5420207" target="_blank" rel="noopener noreferrer">Knit Picks</a>. Not only does Knit Picks have a lovely assorted of solid colors, their Dishie yarn in worsted weight comes in a selection of variegated fun colorways. At this point, I’ve made every color combination under the sun.
 
-  My kitchen drawers are full of them, and they get daily use — wiping counters, drying dishes, and generally making themselves indispensable.
+  My kitchen drawers are full of My Dishie Clothes, and they get daily use from wiping counters, drying dishes, and generally making themselves indispensable.
 
-  🧶 <a href="/crafts/ballband-kitchen-clothes" target="_blank" rel="noopener noreferrer">Ballband Dishie Clothes</a> for endless knitting with my simple pattern.
+  🧶 <a href="/crafts/ballband-kitchen-clothes" target="_blank" rel="noopener noreferrer">My Dishie Clothes</a> for endless knitting fun with my simple pattern.
 ---
