--- a/src/content/posts/birdseed-ornaments.mdx
+++ b/src/content/posts/birdseed-ornaments.mdx
@@ -1,8 +1,9 @@
 ---
 title: "Birdseed Ornaments"
-date: "10-05-2025"
+date: "2025-12-10"
 hero: "/images/crafts/birdseed-ornament.png"
 tags: ["crafts", "other-crafts"]
+published: false
 text: |
   Living in Vermont, we're careful about when we put out our bird feeders.  Black bears are opportunistic foragers, and a bounty of suet and seeds are a bear's delight!
 
