--- a/src/content/posts/cheesy-chili-mac.mdx
+++ b/src/content/posts/cheesy-chili-mac.mdx
@@ -1,10 +1,11 @@
 ---
 title: "Jars of Cheesy Chili Mac"
-date: "12-01-2025"
+date: "2025-12-01"
 hero: "/images/recipes/soup-pasta/cheesy-chili-mac.png"
 tags: ["kitchen"]
+published: false
 text: |
-  Something about comfort food with a kick...
+  Cheesy chili mac...
 
   🫙 <a href="/recipes/cheesy-chili-mac">Cheesy Chili Mac</a>
 ---
