--- a/src/content/posts/crayons.mdx
+++ b/src/content/posts/crayons.mdx
@@ -1,17 +1,11 @@
 ---
 title: "Recycled Crayons"
-date: "09-05-2025"
+date: "2025-08-05"
 hero: "/images/crafts/crayons.png"
 tags: ["crafts", "other-crafts"]
 text: |
 
-  I suspect that many of us have baskets, or bins, or drawers, full of random crayons in different sizes, colors, and brands collected over the years.
-
-  Stuff
-
-  and
-
-  Stuff
+  Crayons...
 
   🏠 <a href="https://www.pussyhatproject.com/mission" target="_blank" rel="noopener noreferrer">Pussy Hat Mission</a>  
   🏠 <a href="https://www.pussyhatproject.com/knit" target="_blank" rel="noopener noreferrer">Pussy Hat Pattern</a>
