--- a/src/content/posts/jar-of-sweetness.mdx
+++ b/src/content/posts/jar-of-sweetness.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Jars Full of Sweetness"
-date: "08-01-2025"
+title: "Jars of M&M Cookie Delights"
+date: "2025-09-01"
 hero: "/images/recipes/cookies/m-and-m-cookies.png"
 tags: ["kitchen"]
 text: |
