--- a/src/content/posts/pussy-hat.mdx
+++ b/src/content/posts/pussy-hat.mdx
@@ -1,6 +1,6 @@
 ---
-title: "One Skein Wonder"
-date: "08-25-2025"
+title: "Pussy Hat"
+date: "2025-08-25"
 hero: "/images/crafts/little-pussy-hat.jpeg"
 tags: ["crafts", "knitting"]
 text: |
