--- a/src/content/recipes/maple-glazed-carrots.mdx
+++ b/src/content/recipes/maple-glazed-carrots.mdx
@@ -1,26 +1,21 @@
 ---
 title: "Rooty Maple Delights"
-date: "2025-09-30"
+date: "2026-01-30"
 hero: "/images/recipes/sides/maple-glazed-carrots.jpeg"
 tags: ["sides"]
 parentPost: "/posts/rooty-maple-delights"
 text: |-
-  My Bold Earth spice mix is a family favorite. Each sprinkle carries the earthy heat of the Sahara, the smoky allure of bustling souks, and the sweet, aromatic whispers of ancient trade routes. 
+  I roast my carrots in maple goodness
 
-  It turns everyday cooking into an adventure, inviting you to savor the depth and complexity of a place where spices tell stories, meals bring people together, and flavors celebrate life’s vibrancy.
+bakingYield: "X"
+bakingPrepTime: "X minutes"
+bakingTime: "X minutes"
 
-yield: "X cup"
-cookingPrepTime: "X minutes"
-cookingTime: "X minutes"
-
-ingredients:
+bakingIngredients:
   - "X"
 
-cookingIngredients:
+bakingSteps:
   - "X"
-
-cookingSteps:
-  - "X."
 
 pdf: "maple-glazed-carrots.pdf"
 ---
