--- a/src/content/woodland-crafts/birdseed-ornaments.mdx
+++ b/src/content/woodland-crafts/birdseed-ornaments.mdx
@@ -1,8 +1,9 @@
 ---
 title: "Birdseed Ornaments"
-date: "0-05-2025"
+date: "2025-12-10"
 hero: "/images/crafts/birdseed-ornament.png"
 tags: ["woodland-crafts"]
+published: false
 parentPost: "/posts/birdseed-ornaments"
 text: |
   Every few seasons, my girls and I build fairy houses to scatter around our woods.  It's a little touch of whimsy that fills my heart when I'm outside breathing in the universe.
