--- a/src/content/posts/golden-fairy-rings.mdx
+++ b/src/content/posts/golden-fairy-rings.mdx
@@ -3,6 +3,7 @@ title: "Golden Fairy Rings"
 date: "2025-07-15"
 hero: "/images/posts/chanterelles.jpeg"
 tags: ["woodland"]
+published: false
 text: |
   I found some chanterelles a few days ago. Not with the usual summer abundance that sometimes spills into the woods, but just enough to spark delight. 
 
