Add isPublish boolean feature for content

--- a/src/content/posts/birdseed-ornaments.mdx
+++ b/src/content/posts/birdseed-ornaments.mdx
@@ -3,7 +3,7 @@ title: "Birdseed Ornaments"
 date: "2025-12-10"
 hero: "/images/crafts/birdseed-ornament.png"
 tags: ["crafts", "other-crafts"]
-published: false
+published: true
 text: |
   Living in Vermont, we're careful about when we put out our bird feeders.  Black bears are opportunistic foragers, and a bounty of suet and seeds are a bear's delight!
 
