--- a/src/content/posts/cheesy-chili-mac.mdx
+++ b/src/content/posts/cheesy-chili-mac.mdx
@@ -3,7 +3,7 @@ title: "Jars of Cheesy Chili Mac"
 date: "2025-12-01"
 hero: "/images/recipes/soup-pasta/cheesy-chili-mac.png"
 tags: ["kitchen"]
-published: false
+published: true
 text: |
   Cheesy chili mac...
 
