--- a/src/content/posts/false-chanterelles.mdx
+++ b/src/content/posts/false-chanterelles.mdx
@@ -3,6 +3,7 @@ title: "False Chanterelles"
 date: "2025-09-10"
 hero: "/images/posts/false-chanterelles.jpeg"
 tags: ["woodland"]
+published: false
 text: |
 
   These cute little golden cups are called False Chanterelles.  Which is funny, since they look nothing like true Chanterelles beyond their gorgeous golden hue.
