--- a/src/content/posts/rooty-maple-delights.mdx
+++ b/src/content/posts/rooty-maple-delights.mdx
@@ -3,8 +3,9 @@ title: "Rooty Maple Delights"
 date: "2026-01-30"
 hero: "/images/recipes/sides/maple-glazed-carrots.jpeg"
 tags: ["sides"]
+published: false
 text: |
-  Stuff about carrots and maple...
+  Rooty Maple Delights...
 
   🧶 <a href="/recipes/sides/maple-glazed-carrots" target="_blank" rel="noopener noreferrer">Maple Glazed Carrots</a>
 ---
