--- a/src/content/posts/bold-earth.mdx
+++ b/src/content/posts/bold-earth.mdx
@@ -3,6 +3,7 @@ title: "Jar of Bold Earth Spice Mix"
 date: "2025-07-01"
 hero: "/images/recipes/spice-mix/bold-earth.png"
 tags: ["spice-mix"]
+published: false
 text: |
   I’m notoriously both lazy and busy. While I love the romance of an all-day simmering sauce, the slow bubblings of a pot on the stove, the kitchen filled with tantalizing scents, most days are too hectic for that kind of cooking.
 
