--- a/src/content/posts/crayons.mdx
+++ b/src/content/posts/crayons.mdx
@@ -3,6 +3,7 @@ title: "Recycled Crayons"
 date: "2025-08-05"
 hero: "/images/crafts/crayons.png"
 tags: ["crafts", "other-crafts"]
+published: false
 text: |
 
   Crayons...
