--- a/src/content/posts/jar-of-meal.mdx
+++ b/src/content/posts/jar-of-meal.mdx
@@ -3,6 +3,7 @@ title: "Jars Full of Comfort"
 date: "2025-08-01"
 hero: "/images/posts/chicken-noodle-soup.png"
 tags: ["kitchen"]
+published: false
 text: |
   I continue my Jar series this month with easy entrees that spell COMFORT.  They're all prepped in pretty mason jars, add some protein or coconut milk and you have a hearty meal for any day of the week.
 
