--- a/src/content/posts/jar-of-sweetness.mdx
+++ b/src/content/posts/jar-of-sweetness.mdx
@@ -3,6 +3,7 @@ title: "Jars of M&M Cookie Delights"
 date: "2025-09-01"
 hero: "/images/recipes/cookies/m-and-m-cookies.png"
 tags: ["kitchen"]
+published: false
 text: |
   Last month I shared my little kitchen hack for easy weeknight dinners — jars of homemade spice blends, ready for a quick sprinkle here and there.
 
