--- a/src/content/posts/sugar-cubes.mdx
+++ b/src/content/posts/sugar-cubes.mdx
@@ -3,6 +3,7 @@ title: "Little Cubes of Sweet Love"
 date: "2025-10-01"
 hero: "/images/crafts/sugar-cubes.png"
 tags: ["crafts", "kitchen-crafts"]
+published: false
 text: |
   My girls and I love afternoon tea.  I grew up in colonial Hong Kong, and I have the fondest of memories of my mother and I spending afternoons at the Peninsula Hotel in Kowloon over the prettiest tiers of finger sandwiches, little scones with Devonshire cream and jams, and of course my favorite Earl Grey tea in elegant Wedgewood tea cups.
 
