--- a/src/content/posts/sweet-harmony.mdx
+++ b/src/content/posts/sweet-harmony.mdx
@@ -3,6 +3,7 @@ title: "Jars of Sweet Harmony"
 date: "2025-11-01"
 hero: "/images/posts/sweet-harmony.png"
 tags: ["kitchen"]
+published: false
 text: |
   I’m notoriously both lazy and busy. While I love the romance of an all-day simmering sauce—the slow bubblings of a pot on the stove, the kitchen filled with tantalizing scents—most days are too hectic for that kind of cooking.
 
