--- a/src/content/recipes/bold-earth.mdx
+++ b/src/content/recipes/bold-earth.mdx
@@ -3,7 +3,7 @@ title: "Bold Earth Spice Mix"
 date: "2025-07-01"
 hero: "/images/recipes/spice-mix/bold-earth.png"
 tags: ["spice-mix"]
-published: true
+published: false
 parentPost: "/posts/bold-earth"
 text: |-
   My Bold Earth spice mix is a family favorite. Each sprinkle carries the earthy heat of the Sahara, the smoky allure of bustling souks, and the sweet, aromatic whispers of ancient trade routes. 
