--- a/src/content/recipes/chocolate-cranberry-cookies.mdx
+++ b/src/content/recipes/chocolate-cranberry-cookies.mdx
@@ -3,6 +3,7 @@ title: "Chocolate Cranberry Cookies"
 date: "2026-09-01"
 hero: "/images/recipes/cookies/chocolate-cranberry-cookies.png"
 tags: ["cookies"]
+published: false
 parentPost: "/posts/chocolate-cranberry-cookies"
 text: "My Chocolate Cranberry Cookie mix is a delightful blend of rich, decadent flavors and festive charm, perfect for any holiday or special occasion. The soft, spiced cookie base, enhanced with a hint of cinnamon, pairs beautifully with tart dried cranberries and indulgent dark chocolate chips, creating a treat that’s as comforting as it is indulgent.
 
