--- a/src/content/recipes/m-and-m-cookies.mdx
+++ b/src/content/recipes/m-and-m-cookies.mdx
@@ -3,6 +3,7 @@ title: "M&M Cookies"
 date: "2025-09-01"
 hero: "/images/recipes/cookies/m-and-m-cookies.png"
 tags: ["cookies"]
+published: false
 parentPost: "/posts/m-and-m-cookies"
 text: "My M&M Cookie mix is a celebration of sweet, nostalgic flavors and endless versatility, perfect for every holiday and special occasion. The soft, chewy cookie base is a delightful canvas, made even more festive with the bright crunch of classic M&M candies.
 
