--- a/src/content/recipes/oatmeal-raisin-cookies.mdx
+++ b/src/content/recipes/oatmeal-raisin-cookies.mdx
@@ -3,6 +3,7 @@ title: "Oatmeal Raisin Cookies"
 date: "2026-05-01"
 hero: "/images/recipes/cookies/oatmeal-raisin-cookies.png"
 tags: ["cookies"]
+published: false
 parentPost: "/posts/oatmeal-raisin-cookies"
 text: "My Oatmeal Raisin Cookie mix is a timeless blend of hearty textures and warm, nostalgic flavors, making it the perfect treat for any occasion. The soft, spiced cookie base, elevated by the rich sweetness of raisins, a touch of cinnamon, and freshly grated nutmeg, combines beautifully with the earthy crunch of walnuts and the wholesome chew of old-fashioned oats.
 
