--- a/src/content/recipes/sweet-harmony.mdx
+++ b/src/content/recipes/sweet-harmony.mdx
@@ -3,6 +3,7 @@ title: "Sweet Harmony"
 date: "2025-11-01"
 hero: "/images/recipes/spice-mix/sweet-harmony.png"
 tags: ["spice-mix"]
+published: false
 parentPost: "/posts/sweet-harmony"
 text: "My Sweet Harmony spice mix is a symphony for your taste buds—sweet, savory, and unapologetically delightful. Like the perfect melody, this mix strikes just the right balance, combining smoky paprika, garlic, and onion with the gentle warmth of cayenne and mustard. The rich sweetness of dark brown sugar ties it all together, creating a blend that dances on your palate and brings life to every meal. Sweet Harmony isn’t just a seasoning—it’s a celebration of flavor, family, and the magic of shared meals."
 textToo: "Sprinkle it generously over pork ribs or chicken wings before grilling, and watch as the caramelized crust steals the show. Add it to roasted vegetables for a side dish that hits all the right notes. No matter how you use it, this magical mix makes everything kid-friendly."
