--- a/src/content/recipes/ultimate-brownies.mdx
+++ b/src/content/recipes/ultimate-brownies.mdx
@@ -3,6 +3,7 @@ title: "Ultimate Brownies"
 date: "2026-01-01"
 hero: "/images/recipes/cookies/ultimate-brownies.png"
 tags: ["cookies"]
+published: false
 parentPost: "/posts/ultimate-brownies"
 text: "Indulge in the ultimate chocolate lover’s dream with our Fudgy Brownie Mix in a jar. Crafted with premium cocoa and perfectly balanced dry ingredients, this mix guarantees thick, gooey brownies with every bake.
 
