--- a/src/content/woodland-crafts/ghost-pipe.mdx
+++ b/src/content/woodland-crafts/ghost-pipe.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Ghost Pipes Tincture"
 date: "2025-08-10"
-hero: "/images/posts/ghost-pipe.jpeg"
+hero: "/images/posts/tincture.jpeg"
 tags: ["field-notes"]
 parentPost: "/posts/spectral-ghost-pipe"
 text: |
