--- a/src/content/crafts/sugar-cubes.mdx
+++ b/src/content/crafts/sugar-cubes.mdx
@@ -3,6 +3,7 @@ title: "Sugar Cubes"
 date: "2025-10-01"
 hero: "/images/crafts/sugar-cubes.png"
 tags: ["crafts", "kitchen-crafts"]
+published: false
 parentPost: "/posts/suagr-cubes"
 text: |
   Homemade sugar cubes are the quintessential homemade easy peasy gift.
