--- a/src/content/recipes/chicken-noodle-soup.mdx
+++ b/src/content/recipes/chicken-noodle-soup.mdx
@@ -3,6 +3,7 @@ title: "Chicken Noodle Soup"
 date: "2025-08-01"
 hero: "/images/recipes/soup-pasta/chicken-noodle-soup.png"
 tags: ["soup-pasta"]
+published: false
 parentPost: "/posts/chicken-noodle-soup"
 text: |
   Our Chicken Noodle Soup mix captures the essence of home in every spoonful. Tender egg noodles blend seamlessly with savory minced onion, celery, and carrots, creating a medley of flavors that feels like a cozy hug on a chilly day.
