--- a/src/content/recipes/coconut-lentil-curry.mdx
+++ b/src/content/recipes/coconut-lentil-curry.mdx
@@ -3,6 +3,7 @@ title: "Lentil Coconut Curry"
 date: "2026-08-01"
 hero: "/images/recipes/soup-pasta/lentil-coconut-curry.png"
 tags: ["soup-pasta"]
+published: false
 parentPost: "/posts/lentil-coconut-curry"
 text: |
   Our Coconut Lentil Curry soup mix is a comforting embrace in a bowl—rich, hearty, and effortlessly nourishing. Like the perfect balance of spice and warmth, this blend combines the earthiness of orange and green lentils with the bold depth of curry powder, onion, and garlic. A subtle kick from cayenne pepper and the savory undertones of granulated vegetable bouillon elevate the flavors, creating a harmonious fusion that feels like a culinary hug.
